--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "@emotion/styled": "^11.13.5",
     "@formspree/react": "^2.5.1",
     "@mui/material": "^6.1.8",
+    "@supabase/auth-ui-react": "^0.4.7",
+    "@supabase/auth-ui-shared": "^0.1.8",
+    "@supabase/supabase-js": "^2.47.3",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -21,6 +24,7 @@
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.28.0",
     "react-scripts": "^5.0.1",
+    "router-dom": "^3.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
