Corretto il formato di package.json

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "main": "script.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "http-server . -o"
+    "start": "http-server . -o", 
+    "build": "echo 'No build step required for static site'"
   },
   "author": "",
   "license": "ISC",
